--- a/.gitignore
+++ b/.gitignore
@@ -3,21 +3,11 @@
 /public/build
 /public/hot
 /public/storage
-/public/puppy-images/cover/*.jpg
-/public/puppy-images/meta-images/*.jpg
-/public/puppy-images/og-images/*.jpg
-/public/puppy-images/cover/*.gif
-/public/puppy-images/meta-images/*.gif
-/public/puppy-images/og-images/*.gif
-/public/puppy-images/cover/*.webg
-/public/puppy-images/meta-images/*.webg
-/public/puppy-images/og-images/*.webg
-/public/puppy-images/cover/*.png
-/public/puppy-images/meta-images/*.png
-/public/puppy-images/og-images/*.png
-/public/puppy-images/cover/*.jpeg
-/public/puppy-images/meta-images/*.jpeg
-/public/puppy-images/og-images/*.jpeg
+*.jpg
+*.gif
+*.webg
+*.png
+*.jpeg
 /storage/*.key
 /vendor
 .env
